# yandex-alice-hackaton

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/src/: config.rs  db.rs  error.rs  main.rs  prompts.rs  worker.rs
backend/src/routes/: ai.rs  buddy.rs  community.rs  forum.rs  journey.rs  mod.rs  ocr.rs  translate.rs
backend/src/yandex/: ai.rs  iam.rs  mod.rs  ocr.rs  stt.rs  translate.rs  tts.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AIOrb.tsx  ARScanner.tsx  BuddyProfileModal.tsx  Community.tsx  ForumPanel.tsx  SpatialTimeline.tsx  WalkieTalkie.tsx
frontend/src/data/: journey.ts
frontend/src/hooks/: useHaptics.ts
frontend/src/landing/: Demo.tsx  Developer.tsx  Features.tsx  Footer.tsx  Hero.tsx  Problem.tsx  Solution.tsx  atoms.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AppShell.tsx  Landing.tsx
