[package]
name = "welcome-to-russia"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# SurrealDB remote over websocket — connects to a running surreal server.
# For an embedded / no-server fallback, swap the feature back to ["kv-mem"].
surrealdb = { version = "2.0", default-features = false, features = ["protocol-ws"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
